Fix folder title color issue

Changes:
Change the color of the folder title to be Grey 700.

Bug: 901286
Change-Id: Ie2e4603a6b248976fbdb114533e1c6e90485bd01
Reviewed-on: https://chromium-review.googlesource.com/c/1330833
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607299}
Former-commit-id: 8369a08e4444f068f29c4a3dba4da72d0f78f357