ash/app_list/views/folder_header_view.cc
@@ -69,14 +69,13 @@ FolderHeaderView::FolderHeaderView(FolderHeaderViewDelegate* delegate)
               IDS_APP_LIST_FOLDER_NAME_PLACEHOLDER)),
       delegate_(delegate),
       folder_name_visible_(true) {
-  ui::ResourceBundle& rb = ui::ResourceBundle::GetSharedInstance();
-  gfx::FontList font_list = rb.GetFontList(ui::ResourceBundle::MediumFont);
   folder_name_view_->set_placeholder_text_color(kFolderTitleHintTextColor);
   folder_name_view_->set_placeholder_text(folder_name_placeholder_text_);
   folder_name_view_->SetBorder(views::NullBorder());
 
   // Make folder name font size 14px.
-  folder_name_view_->SetFontList(font_list.DeriveWithSizeDelta(-1));
+  folder_name_view_->SetFontList(
+      ui::ResourceBundle::GetSharedInstance().GetFontListWithDelta(2));
   folder_name_view_->SetBackgroundColor(SK_ColorTRANSPARENT);
   folder_name_view_->SetTextColor(kFolderNameColor);
   folder_name_view_->set_controller(this);
